# pyPRUF

./: .gitignore  .readthedocs.yaml  README.md  __main__.py  examples.py  fake_data.py  fuzzy_logic.py  fuzzy_set.py  membership_functions.py  mkdocs.yaml  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py  translation_rules.py
.github/workflows/: python-publish.yml
docs/: about.md  api.md  cont_fuzzy_sets.md  fuzzy_logic.md  fuzzy_rel_alg.md  fuzzy_relational_algebra.md  index.md  pruf.md  pruf_operators.md  requirements.txt  translation_rules.md  user_guide.md
pyPRUF/: __init__.py  fuzzy_logic.py  fuzzy_set.py  fuzzy_sets.py  membership_functions.py
tests/unit/: membership_functions_plots.py  run_tests.py  test_fuzzy_set.py
